--- a/notebooks/TFDS/tensorflow datasets.ipynb
+++ b/notebooks/TFDS/tensorflow datasets.ipynb
@@ -14,11 +14,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### import datasets with tensorflow datasets"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "mnist_data,info = tfds.load(name='fashion_mnist',with_info=True)"
+    "mnist_data, info = tfds.load(name='fashion_mnist', with_info=True)"
    ],
    "metadata": {
     "collapsed": false,
@@ -88,7 +97,7 @@
    "source": [
     "mnist_train = tfds.load(name='fashion_mnist',\n",
     "                        split='train')\n",
-    "assert isinstance(mnist_train,tf.data.Dataset)\n",
+    "assert isinstance(mnist_train, tf.data.Dataset)\n",
     "print(type(mnist_train))"
    ],
    "metadata": {
@@ -197,7 +206,7 @@
     "for item in mnist_train.take(1):\n",
     "    print(type(item))\n",
     "    print(item.keys())\n",
-    "    print(np.asarray(item['image']).reshape((28,28)))\n",
+    "    print(np.asarray(item['image']).reshape((28, 28)))\n",
     "    print(item['label'])"
    ],
    "metadata": {
@@ -223,6 +232,104 @@
    "source": [
     "info"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### tensorflow datasets with Keras"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\hewar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow_datasets\\core\\dataset_builder.py:622: get_single_element (from tensorflow.python.data.experimental.ops.get_single_element) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.data.Dataset.get_single_element()`.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\hewar\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tensorflow_datasets\\core\\dataset_builder.py:622: get_single_element (from tensorflow.python.data.experimental.ops.get_single_element) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.data.Dataset.get_single_element()`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "(training_images, training_labels), (test_images, test_labels) = tfds.as_numpy(\n",
+    "    tfds.load('fashion_mnist',\n",
+    "              split=['train', 'test'],\n",
+    "              batch_size=-1,\n",
+    "              as_supervised=True))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "mnist_val = tfds.load(name='fashion_mnist',\n",
+    "                      split='test',\n",
+    "                      as_supervised=True)\n",
+    "validation_batch = mnist_val.batch(32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<BatchDataset shapes: ((None, 28, 28, 1), (None,)), types: (tf.uint8, tf.int64)>"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "validation_batch"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
