image augmentation with mapping function and tensorflow addons

--- a/notebooks/TFDS/tensorflow datasets.ipynb
+++ b/notebooks/TFDS/tensorflow datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -10,7 +10,8 @@
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
+    "import tensorflow_datasets as tfds\n",
+    "import tensorflow_addons as tfadd"
    ]
   },
   {
@@ -317,6 +318,156 @@
    ],
    "source": [
     "validation_batch"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001B[1mDownloading and preparing dataset Unknown size (download: Unknown size, generated: Unknown size, total: Unknown size) to C:\\Users\\hewar\\tensorflow_datasets\\cnn_dailymail\\3.1.0...\u001B[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Dl Completed...: 0 url [00:00, ? url/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2675a323b7784de09be5e17068e04acb"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Dl Size...: 0 MiB [00:00, ? MiB/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7d95252ed8954c06900387fd7820af1c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Extraction completed...: 0 file [00:00, ? file/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "015ca082e84c4ebe9195e8fe42d256bd"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cnn_data, info = tfds.load(name='cnn_dailymail:3.1.0', with_info=True)\n",
+    "info"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### mapping function to augmentation"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<BatchDataset shapes: ((None, 300, 300, 3), (None,)), types: (tf.uint8, tf.int64)>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data, info = tfds.load(name='horses_or_humans',\n",
+    "                       split='train',\n",
+    "                       as_supervised=True,\n",
+    "                       with_info=True)\n",
+    "train_batches = data.shuffle(100).batch(10)\n",
+    "train_batches"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "def augmentimages(image, label):\n",
+    "    image = tf.cast(image, tf.float32)\n",
+    "    image = image / 255\n",
+    "    image = tf.image.random_flip_left_right(image)\n",
+    "\n",
+    "    return image, label"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "train = data.map(augmentimages)\n",
+    "train_batches = train.shuffle(100).batch(32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "def augmentimages_v2(image, label):\n",
+    "    image = tf.cast(image, tf.float32)\n",
+    "    image = image / 255\n",
+    "    image = tf.image.random_flip_left_right(image)\n",
+    "    image = tfadd.image.rotate(image, angles=40, interpolation='NEAREST')\n",
+    "\n",
+    "    return image, label"
    ],
    "metadata": {
     "collapsed": false,
