--- a/notebooks/TFDS/tensorflow datasets.ipynb
+++ b/notebooks/TFDS/tensorflow datasets.ipynb
@@ -477,10 +477,111 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### custom splits"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tfds.load(name='fashion_mnist',\n",
+    "                 split='train[:10000]',\n",
+    "                 as_supervised=True)\n",
+    "\n",
+    "print([i for i,_ in enumerate(data)][-1] + 1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tfds.load(name='fashion_mnist',\n",
+    "                 split='train[:20%]',\n",
+    "                 as_supervised=True)\n",
+    "\n",
+    "print([i for i,_ in enumerate(data)][-1] + 1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tfds.load(name='fashion_mnist',\n",
+    "                 split='train[-1000:] + train[:1000]',\n",
+    "                 as_supervised=True)\n",
+    "\n",
+    "print([i for i,_ in enumerate(data)][-1] + 1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18000\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = tfds.load(name='fashion_mnist',\n",
+    "                 split='train[30%:60%]',\n",
+    "                 as_supervised=True)\n",
+    "\n",
+    "print([i for i,_ in enumerate(data)][-1] + 1)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
